# AcoesProfeth

./: app.py  functions.py  pyproject.toml  streamlit_app.py
