[tool.poetry]
name = "acoes-profet"
version = "0.1.0"
description = ""
authors = ["Daniel Fonseca Alves <dalraf@gmail.com>"]
readme = "README.md"
packages = [{include = "acoes_profet"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
prophet = "^1.1.2"
yfinance = "^0.2.9"
streamlit = "1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
