[tool.poetry]
name = "acoes-profet"
version = "0.1.0"
description = ""
authors = ["Daniel Fonseca Alves <dalraf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
yfinance = "^0.2.9"
prophet = "^1.1.2"
streamlit = "^1.21.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
